--- a/source/_ga.html.erb
+++ b/source/_ga.html.erb
@@ -1,3 +1,4 @@
+<% unless development? %>
 <script type="text/javascript">
 
     var _gaq = _gaq || [];
@@ -14,3 +15,4 @@
     })();
 
 </script>
+<% end %>
