--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,24 +1,14 @@
----
-pageable: true
-per_page: 10
----
-
-<% content_for :title, "努力奔跑" %>
+<% content_for :title, "在路上" %>
 <div class="row">
-  <div class="span8">
-    <% page_articles.each_with_index do |article, i| %>
-        <article class="block clearfix">
-          <h4>
-            <div class="timestamp"><%= date_display article.date %></div>
-            <%= link_to article.title, article %>
-          </h4>
-          <p><%= article.summary %></p>
-
-          <div class="pull-right"><%= link_to "深入阅读 >>", article %></div>
-        </article>
-    <% end %>
-
-    <%= partial 'pagination', :locals => {:paginate => paginate, :prev_page => prev_page, :next_page => next_page, :page_number => page_number, :num_pages => num_pages} %>
+  <div class="span3">
+    <div class="photo-paper tech"><%= link_to "技术博客", tag_path('tech') %></div>
   </div>
-  <%= partial 'sidebar' %>
+
+  <div class="span3 offset1">
+    <div class="photo-paper life"><%= link_to "发现生活", "#" %></div>
+  </div>
+
+  <div class="span3 offset2">
+    <div class="photo-paper"><%= link_to "关于我", "#" %></div>
+  </div>
 </div>
