--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -130,3 +130,29 @@ footer {
     }
   }
 }
+
+.photo-paper {
+  border-color: $blockColor;
+  border-width: 8px 8px 44px;
+  border-style: solid;
+  height: 250px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, .2);
+  background-position: center top;
+  @include box-shadow(0 0 1px #666);
+  font-size: 16px;
+
+  a {
+    position: relative;
+    top: 250px;
+    line-height: 44px;
+  }
+
+  &.tech {
+    background-image: url(/images/tech.jpg);
+  }
+
+  &.life {
+    background-image: url(/images/life.jpg);
+  }
+}
