--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -1,18 +1,24 @@
 ---
 pageable: true
-per_page: 12
+per_page: 10
 ---
 <% content_for :title, tagname %>
 
-<div class="block">
-  <h3><i class="icon-tags"></i> <%= tagname %></h3>
-
-  <ul class="article-list">
+<div class="row">
+  <div class="span8">
     <% page_articles.each_with_index do |article, i| %>
-        <li><%= link_to article.title, article %> <span><%= date_display article.date %></span></li>
+        <article class="block clearfix">
+          <h4>
+            <div class="timestamp"><%= date_display article.date %></div>
+            <%= link_to article.title, article %>
+          </h4>
+          <p><%= article.summary %></p>
+
+          <div class="pull-right"><%= link_to "深入阅读 >>", article %></div>
+        </article>
     <% end %>
-  </ul>
 
+    <%= partial 'pagination', :locals => {:paginate => paginate, :prev_page => prev_page, :next_page => next_page, :page_number => page_number, :num_pages => num_pages} %>
+  </div>
+  <%= partial 'sidebar' %>
 </div>
-
-<%= partial 'pagination', :locals => {:paginate => paginate, :prev_page => prev_page, :next_page => next_page, :page_number => page_number, :num_pages => num_pages} %>
